# Algorithms-Data-structures

2_14/: CMakeLists.txt  clear_gv_command.command  clear_png_command.command  gv2png_command.command  log.txt  readme.md
2_14/imgs/: \dump_#_0000.gv  \dump_#_0001.gv  \dump_#_0002.gv  \dump_#_0003.gv  \dump_#_0004.gv  \dump_#_0005.gv  \dump_#_0006.gv  \dump_#_0007.gv  \dump_#_0008.gv  \dump_#_0009.gv  \dump_#_0010.gv  \dump_#_0011.gv  \dump_#_0012.gv  \dump_#_0013.gv  \dump_#_0014.gv  \dump_#_0015.gv  \dump_#_0016.gv  \dump_#_0017.gv  \dump_#_0018.gv  \dump_#_0019.gv  \dump_#_0020.gv  \dump_#_0021.gv  \dump_#_0022.gv  \dump_#_0023.gv  \dump_#_0024.gv  \dump_#_0025.gv  \dump_#_0026.gv  (+21 more)
2_15/: CMakeLists.txt
2_15/lib/gtest/googletest/xcode/gtest.xcodeproj/project.xcworkspace/xcuserdata/pauldanilin.xcuserdatad/: UserInterfaceState.xcuserstate
2_15/main/: CMakeLists.txt  btree.cpp  btree.h  btree_adapters.h  main.cpp
2_15/tests/: CMakeLists.txt  adapters1_tests.cpp  btree1_tests.cpp  individual.h
2_16/: CMakeLists.txt  test.cmd  toyBDD.cpp  toyBDD.h
2_4/: CMakeLists.txt  linked_list.h  linked_list.hpp  main.cpp
2_7/: CMakeLists.txt  arbitrary1.out  bigfirst1.out  main.cpp
2_8/: CMakeLists.txt
2_9/: CMakeLists.txt
2_9/src/: RailSystem.cpp  RailSystem.h  main.cpp
4_4/: CMakeLists.txt
DZ_4_1/: CMakeLists.txt  main.cpp
DZ_4_1/ALGO_4_1/: JournalNetActivity.hpp  SkipList.h  SkipList.hpp
DZ_4_2/: CMakeLists.txt  readme.md
DZ_5/: CMakeLists.txt  NiceQueue.h  NiceQueue.hpp  NiceStack.h  NiceStack.hpp  main.cpp
kmh/: CMakeLists.txt  kmp.cpp  main.cpp
(+13 files in other folders)
